--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <div class="card">
     
-    <img src="./images/image-product-desktop.jpg" alt="product">
+    <img class="image-desktop" src="./images/image-product-desktop.jpg" alt="product">
+    <img class= "image-mobile" src="./images/image-product-mobile.jpg" alt="product">
+
 
     <div class="card-information">
 
@@ -39,7 +41,7 @@
 
       <a href="https://www.amazon.com/" target="blank">
       <button class="add-cart">
-         <img src="/projeto/images/icon-cart.svg" alt="cart icon">  
+         <img src="./projeto/images/icon-cart.svg" alt="cart icon">  
          Add to Cart
       </button>
       </a>
