--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <a href="https://www.amazon.com/" target="blank">
       <button class="add-cart">
-         <img src="./projeto/images/icon-cart.svg" alt="cart icon">  
+         <img src="./images/icon-cart.svg" alt="cart icon">  
          Add to Cart
       </button>
       </a>
